Latest stable tag
1.10.6 release fixing a potential consensus issue.

--- a/Dockerfiles/Dockerfile-eth
+++ b/Dockerfiles/Dockerfile-eth
@@ -3,7 +3,7 @@ MAINTAINER Ajay Joseph <ajay@hatio.in>
 WORKDIR /build
 #ENV for build TAG
 ARG BUILD_TAG
-ENV BUILD_TAG ${BUILD_TAG:-master}
+ENV BUILD_TAG ${BUILD_TAG:-v1.10.6}
 RUN echo "Build tag:" $BUILD_TAG
 # install tools and dependencies
 RUN apt-get update && \
