--- a/Dockerfiles/Dockerfile-eth
+++ b/Dockerfiles/Dockerfile-eth
@@ -22,6 +22,7 @@ RUN apt-get update && \
         libc6-dev \
         binutils \
         file \
+        cmake3 \
         openssl \
         libssl-dev \
         libudev-dev \
